<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:fontFamily="@font/concert_one"
        android:text="@string/signup_for_free"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="182dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_bg_white"
        android:text="@string/signup"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.562" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="349dp"
        android:layout_height="357dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.18">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText1"
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_fullname"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#D9D9D9" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="415dp"
        android:layout_height="255dp"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upperdesign" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="202dp"
        android:layout_height="121dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:srcCompat="@drawable/boltfit_txt" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="179dp"
        android:layout_height="25dp"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="60dp"
        android:layout_height="25dp"
        android:layout_marginEnd="116dp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.353" />


</androidx.constraintlayout.widget.ConstraintLayout>